--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,9 +22,9 @@
 		"@remotion/bundler": "^2.0.7",
 		"@remotion/media-utils": "^2.0.7",
 		"@remotion/renderer": "^2.0.7",
+		"ansi-diff": "^1.1.1",
 		"better-opn": "^2.1.1",
 		"chalk": "^4.1.0",
-		"cli-progress": "^3.8.2",
 		"execa": "^4.0.2",
 		"minimist": "^1.2.5",
 		"remotion": "^2.0.7",
