--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -42,6 +42,14 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1"
 	},
+  "peerDependenciesMeta": {
+    "react":{
+      "autoinstall":false
+    },
+    "react-dom":{
+      "autoinstall":false
+    }
+  },
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.210",
 		"@types/express": "^4.17.7",
