--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,14 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1"
 	},
+  "peerDependenciesMeta": {
+    "react":{
+      "autoinstall":false
+    },
+    "react-dom":{
+      "autoinstall":false
+    }
+  },
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.210",
 		"@types/babel__core": "^7.1.12",
