--- a/packages/gif/package.json
+++ b/packages/gif/package.json
@@ -40,6 +40,14 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1"
 	},
+	"peerDependenciesMeta": {
+		"react": {
+			"autoinstall": false
+		},
+		"react-dom": {
+			"autoinstall": false
+		}
+	},
 	"publishConfig": {
 		"access": "public"
 	}
