updated workflow to run on node 12.10,14 and 16

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,19 +2,22 @@ on: push
 name: Install and Test
 jobs:
   build-ubuntu:
-    name: Build
+    name: Build Node ${{ matrix.node_version }} - ffmpeg ${{ matrix.ffmpeg_version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        version: ['4.1','4.4']
+        node_version: ['12.10','14','16']
+        ffmpeg_version: ['4.1','4.4']
     steps:
       - uses: actions/checkout@main
-      - uses: actions/setup-node@main
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node_version }}
       - uses: Iamshankhadeep/setup-ffmpeg@v1.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          version: ${{ matrix.version }}
+          version: ${{ matrix.versionffmpeg_version }}
       - run: npm i
       - run: npx lerna bootstrap --ci
       - run: npm run build
