update react-refresh version
Former-commit-id: cc7fc9049ea32c33892b89ef1ad4b7b5640c2200

--- a/packages/babel-loader/package.json
+++ b/packages/babel-loader/package.json
@@ -24,7 +24,7 @@
 		"@babel/preset-typescript": "^7.12.7",
 		"@webhotelier/webpack-fast-refresh": "^5.1.0",
 		"babel-loader": "^8.1.0",
-		"react-refresh": "0.8.2",
+		"react-refresh": "^0.9.0-rc.2",
 		"webpack": "5.33.2"
 	},
 	"devDependencies": {
