--- a/packages/babel-loader/package.json
+++ b/packages/babel-loader/package.json
@@ -24,11 +24,11 @@
 		"@babel/preset-typescript": "^7.12.7",
 		"@webhotelier/webpack-fast-refresh": "^5.1.0",
 		"babel-loader": "^8.1.0",
-		"react-refresh": "0.8.2",
+		"react-refresh": "^0.9.0-rc.2",
 		"webpack": "5.33.2"
 	},
 	"devDependencies": {
-		"@jonny/eslint-config": "^2.1.230",
+		"@jonny/eslint-config": "^2.1.231",
 		"@types/node": "^14.14.14",
 		"eslint": "^7.4.0",
 		"prettier": "^2.0.5",
