--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -29,7 +29,7 @@
 		"file-loader": "^6.0.0",
 		"get-port": "^5.1.1",
 		"latest-version": "^5.1.0",
-		"react-refresh": "^0.8.2",
+		"react-refresh": "^0.9.0-rc.2",
 		"remotion": "^2.0.7",
 		"semver": "7.3.4",
 		"style-loader": "^2.0.0",
@@ -51,7 +51,7 @@
 		}
 	},
 	"devDependencies": {
-		"@jonny/eslint-config": "^2.1.230",
+		"@jonny/eslint-config": "^2.1.231",
 		"@types/express": "^4.17.7",
 		"@types/node": "^14.0.13",
 		"@types/semver": "^7.3.4",
