--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,9 +6,25 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        node_version: ['14','16']
-        ffmpeg_version: ['4.1','4.4']
+        include:
+          - os: ubuntu-latest
+            node_version: 14
+            ffmpeg_version: 4.4
+          - os: windows-latest
+            node_version: 14
+            ffmpeg_version: 4.4
+          - os: macos-latest
+            node_version: 14
+            ffmpeg_version: 4.4
+          - os: ubuntu-latest
+            node_version: 12
+            ffmpeg_version: 4.4
+          - os: ubuntu-latest
+            node_version: 16
+            ffmpeg_version: 4.4
+          - os: ubuntu-latest
+            node_version: 14
+            ffmpeg_version: 4.1
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@v2
