--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
 	"name": "@remotion/cli",
 	"version": "2.0.7",
 	"description": "CLI for Remotion",
-	"main": "dist/index.js",
+	"main": "bin.js",
 	"sideEffects": false,
 	"bin": {
 		"remotion": "remotion-cli.js"
