disable unused exports
Former-commit-id: 57de4192019cfd542e7d4da995873dcfef85fbb9

--- a/packages/cli/.eslintrc
+++ b/packages/cli/.eslintrc
@@ -1,7 +1,8 @@
 {
 	"extends": "@jonny",
 	"rules": {
-		"no-console": "error"
+		"no-console": "error",
+		"ts-exports/unused-exports": "off"
 	},
 	"overrides": [
 		{
