add coverage badges to readme
Former-commit-id: ab8ca41eab9aa0f43f16f8a784028ce2a487f628

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"sideEffects": false,
 	"scripts": {
-		"test": "eslint src --ext ts,tsx && jest",
+		"test": "eslint src --ext ts,tsx && jest && istanbul-badges-readme --silent",
 		"build": "tsc -d",
 		"watch": "tsc -w",
 		"prerelease": "cp ../../README.md .",
@@ -28,6 +28,7 @@
 		"@types/node": "^14.14.14",
 		"@types/webpack-env": "^1.16.0",
 		"eslint": "^7.4.0",
+		"istanbul-badges-readme": "^1.2.1",
 		"jest": "^26.6.3",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
