--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,8 +8,7 @@
 		"test": "eslint src --ext ts,tsx && jest",
 		"build": "tsc -d",
 		"watch": "tsc -w",
-		"prerelease": "cp ../../README.md .",
-		"prepare": "rimraf node_modules/@types/react"
+		"prerelease": "cp ../../README.md ."
 	},
 	"repository": {
 		"url": "https://github.com/JonnyBurger/remotion"
@@ -31,7 +30,6 @@
 		"jest": "^26.6.3",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"rimraf": "^3.0.2",
 		"ts-jest": "^26.4.4",
 		"typescript": "^4.1.2",
 		"webpack": "5.33.2"
