--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -15,6 +15,7 @@
     "@docusaurus/core": "2.0.0-alpha.75",
     "@docusaurus/preset-classic": "2.0.0-alpha.75",
     "@mdx-js/react": "^1.6.21",
+    "remotion": "^2.0.7",
     "@remotion/player": "^2.0.7",
     "@splitbee/web": "^0.2.4",
     "@types/react": "^17.0.4",
