--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,7 +18,9 @@
     "remotion": "^2.0.7",
     "@remotion/player": "^2.0.7",
     "@splitbee/web": "^0.2.4",
-    "@types/react": "^17.0.4",
+    "polished": "4.1.2",
+    "color-namer": "1.4.0",
+    "@types/color-namer": "^1.3.0",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.1.1"
   },
