add support for environment variables in bundle
Former-commit-id: 9d52365ee3887d0baecc35b05e48fc92ceb160e3

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,7 @@
 		"ansi-diff": "^1.1.1",
 		"better-opn": "^2.1.1",
 		"chalk": "^4.1.0",
+		"dotenv": "^9.0.0",
 		"execa": "^4.0.2",
 		"minimist": "^1.2.5",
 		"remotion": "^2.0.7",
