should also work with React 16
Former-commit-id: 4876a03563fcb2bb3603f74d74bacd425c42e713

--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -27,8 +27,8 @@
 		"remotion": "^2.0.5"
 	},
 	"peerDependencies": {
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1"
+		"react": ">=16.8.0",
+		"react-dom": ">=16.8.0"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.233",
