--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "2.0.8",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -15,14 +15,14 @@
     "@docusaurus/core": "2.0.0-alpha.75",
     "@docusaurus/preset-classic": "2.0.0-alpha.75",
     "@mdx-js/react": "^1.6.21",
-    "remotion": "^2.0.7",
-    "@remotion/player": "^2.0.7",
+    "@remotion/player": "^2.1.0",
     "@splitbee/web": "^0.2.4",
-    "polished": "4.1.2",
-    "color-namer": "1.4.0",
     "@types/color-namer": "^1.3.0",
     "clsx": "^1.1.1",
-    "prism-react-renderer": "^1.1.1"
+    "color-namer": "1.4.0",
+    "polished": "4.1.2",
+    "prism-react-renderer": "^1.1.1",
+    "remotion": "^2.1.0"
   },
   "browserslist": {
     "production": [
