--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,9 +12,11 @@ jobs:
         with:
           persist-credentials: false
 
+      - run: npm i
+      - run: npx lerna bootstrap --ci
       - name: Install and Build 🔧
         run: |
-          cd packages/docs && npm i && npm run build
+          cd packages/docs && npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
