--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -19,13 +19,11 @@
     "@remotion/player": "^2.1.2",
     "@splitbee/web": "^0.2.4",
     "@types/color-namer": "^1.3.0",
-    "@types/styled-components": "^5.1.9",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
     "polished": "4.1.2",
     "prism-react-renderer": "^1.1.1",
-    "remotion": "^2.1.2",
-    "styled-components": "^5.3.0"
+    "remotion": "^2.1.2"
   },
   "browserslist": {
     "production": [
