--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -26,6 +26,7 @@
 		"@aws-sdk/lib-storage": "^3.15.0",
 		"@remotion/bundler": "^2.0.2",
 		"@remotion/renderer": "^2.0.2",
+		"ansi-diff": "^1.1.1",
 		"chalk": "^4.1.1",
 		"esbuild": "^0.11.12",
 		"lambdafs": "^2.0.3",
