--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -26,12 +26,15 @@
 		"@aws-sdk/lib-storage": "^3.15.0",
 		"@remotion/bundler": "^2.0.2",
 		"@remotion/renderer": "^2.0.2",
+		"@types/jest": "^26.0.23",
 		"ansi-diff": "^1.1.1",
 		"chalk": "^4.1.1",
 		"esbuild": "^0.11.12",
+		"jest": "^26.6.3",
 		"lambdafs": "^2.0.3",
 		"minimist": "^1.2.5",
 		"remotion": "^2.0.2",
+		"ts-jest": "^26.5.6",
 		"ts-node": "^9.1.1",
 		"xns": "^2.0.7",
 		"zip-lib": "^0.7.2"
