--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -33,6 +33,7 @@
 		"jest": "^26.6.3",
 		"lambdafs": "^2.0.3",
 		"minimist": "^1.2.5",
+		"p-limit": "^3.1.0",
 		"remotion": "^2.0.2",
 		"ts-jest": "^26.5.6",
 		"ts-node": "^9.1.1",
