--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "devDependencies": {
     "@jonny/eslint-config": "^2.1.233",
-    "@react-three/fiber": "^6.0.14",
     "@types/jest": "^26.0.20",
     "@types/minimist": "^1.2.1",
     "@types/node": "^15.0.1",
@@ -23,12 +22,13 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
     "sharp": "^0.28.1",
-    "three": "^0.127.0",
     "ts-jest": "^26.5.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@react-three/fiber": "^6.1.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "three": "^0.128.0"
   }
 }
