--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -20,6 +20,7 @@
 		"@babel/plugin-syntax-jsx": "7.12.13",
 		"@babel/preset-env": "7.12.13",
 		"@babel/preset-react": "7.12.13",
+		"@react-three/drei": "^4.3.3",
 		"@remotion/babel-loader": "^2.1.2",
 		"@remotion/bundler": "^2.1.2",
 		"@remotion/cli": "^2.1.2",
@@ -28,7 +29,7 @@
 		"@remotion/gif": "^2.1.2",
 		"@remotion/media-utils": "^2.1.2",
 		"@remotion/renderer": "^2.1.2",
-		"@remotion/three": "^2.0.2",
+		"@remotion/three": "^2.1.2",
 		"@types/express": "^4.17.11",
 		"@types/node": "^15.0.1",
 		"@types/styled-components": "^5.1.1",
@@ -40,7 +41,7 @@
 		"remotion": "^2.1.2",
 		"styled-components": "^5.1.1",
 		"svg-path-properties": "^1.0.4",
-		"three": "^0.127.0",
+		"three": ">=0.128.0",
 		"ts-node": "^9.1.1",
 		"ts-unused-exports": "^7.0.1",
 		"typescript": "^4.1.2",
@@ -51,10 +52,6 @@
 		"@types/babel__template": "^7.4.0",
 		"eslint": "^7.25.0",
 		"prettier-plugin-organize-imports": "^1.1.1"
-	},
-	"peerDependencies": {
-		"@react-three/fiber": ">=6.0.14",
-		"three": ">=0.127.0"
 	},
 	"publishConfig": {
 		"access": "public"
