--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/three",
-	"version": "2.0.2",
+	"version": "2.1.2",
 	"description": "Utility functions for using react-three-fiber with remotion",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -17,13 +17,12 @@
 		"url": "https://github.com/JonnyBurger/remotion"
 	},
 	"dependencies": {
-		"remotion": "^2.0.2"
+		"remotion": "^2.1.2"
 	},
 	"peerDependencies": {
 		"@react-three/fiber": ">=6.0.14",
 		"react": ">=17.0.1",
-		"react-dom": ">=17.0.1",
-		"three": ">=0.127.0"
+		"react-dom": ">=17.0.1"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.210",
