--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-    "@docusaurus/core": "2.0.0-alpha.75",
-    "@docusaurus/preset-classic": "2.0.0-alpha.75",
+    "@docusaurus/core": "2.0.0-beta.0",
+    "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@remotion/player": "^2.1.2",
     "@splitbee/web": "^0.2.4",
