--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/lambda",
-	"version": "2.0.2",
+	"version": "2.1.2",
 	"description": "Utility functions for audio and video",
 	"main": "dist/index.js",
 	"sideEffects": false,
@@ -24,20 +24,18 @@
 		"@aws-sdk/client-lambda": "^3.13.0",
 		"@aws-sdk/client-s3": "^3.13.0",
 		"@aws-sdk/lib-storage": "^3.15.0",
-		"@remotion/bundler": "^2.0.2",
-		"@remotion/renderer": "^2.0.2",
+		"@remotion/bundler": "^2.1.2",
+		"@remotion/cli": "^2.1.2",
+		"@remotion/renderer": "^2.1.2",
 		"@types/jest": "^26.0.23",
-		"ansi-diff": "^1.1.1",
-		"chalk": "^4.1.1",
 		"esbuild": "^0.11.12",
 		"jest": "^26.6.3",
 		"lambdafs": "^2.0.3",
 		"minimist": "^1.2.5",
 		"p-limit": "^3.1.0",
-		"remotion": "^2.0.2",
+		"remotion": "^2.1.2",
 		"ts-jest": "^26.5.6",
 		"ts-node": "^9.1.1",
-		"xns": "^2.0.7",
 		"zip-lib": "^0.7.2"
 	},
 	"peerDependencies": {
