--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -21,13 +21,15 @@
 		"url": "https://github.com/JonnyBurger/remotion"
 	},
 	"dependencies": {
-		"@aws-sdk/client-lambda": "^3.13.0",
-		"@aws-sdk/client-s3": "^3.13.0",
+		"@aws-sdk/client-iam": "^3.16.0",
+		"@aws-sdk/client-lambda": "^3.16.0",
+		"@aws-sdk/client-s3": "^3.16.0",
 		"@aws-sdk/lib-storage": "^3.15.0",
 		"@remotion/bundler": "^2.1.2",
 		"@remotion/cli": "^2.1.2",
 		"@remotion/renderer": "^2.1.2",
 		"@types/jest": "^26.0.23",
+		"aws-policies": "^1.0.1",
 		"esbuild": "^0.11.12",
 		"jest": "^26.6.3",
 		"lambdafs": "^2.0.3",
