--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,40 +1,14 @@
 {
-  "name": "docs",
-  "version": "2.1.4",
-  "private": true,
-  "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve",
-    "clear": "docusaurus clear"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-    "@docusaurus/core": "2.0.0-beta.0",
-    "@docusaurus/preset-classic": "2.0.0-beta.0",
-    "@mdx-js/react": "^1.6.21",
-    "@remotion/player": "^2.1.4",
-    "@splitbee/web": "^0.2.4",
-    "@types/color-namer": "^1.3.0",
-    "clsx": "^1.1.1",
-    "color-namer": "1.4.0",
-    "polished": "4.1.2",
-    "prism-react-renderer": "^1.1.1",
-    "remotion": "^2.1.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"dependencies": {
+		"@babel/plugin-transform-modules-commonjs": "^7.14.0",
+		"@docusaurus/core": "2.0.0-beta.0",
+		"@docusaurus/preset-classic": "2.0.0-beta.0",
+		"@mdx-js/react": "^1.6.21",
+		"@splitbee/web": "^0.2.4",
+		"@types/color-namer": "^1.3.0",
+		"clsx": "^1.1.1",
+		"color-namer": "1.4.0",
+		"polished": "4.1.2",
+		"prism-react-renderer": "^1.1.1"
+	}
 }
