start code for optimizing profiles

--- a/packages/lambda/tsconfig.json
+++ b/packages/lambda/tsconfig.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"composite": true,
 		"rootDir": "src",
-		"outDir": "dist"
+		"outDir": "dist",
+		"lib": ["ES2019"]
 	},
 	"include": ["src"],
 	"references": [
