--- a/packages/create-video/package.json
+++ b/packages/create-video/package.json
@@ -19,11 +19,16 @@
 	"dependencies": {
 		"chalk": "^4.1.0",
 		"execa": "^5.0.0",
+		"npm-package-arg": "^8.1.2",
+		"pacote": "^11.3.3",
+		"prompts": "^2.4.1",
 		"xns": "^2.0.7"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.233",
 		"@types/node": "^15.0.1",
+		"@types/npm-package-arg": "^6.1.0",
+		"@types/prompts": "^2.0.12",
 		"eslint": "^7.15.0",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.2"
