--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ jobs:
           persist-credentials: false
 
       - run: npm i
-      - run: npx lerna bootstrap --ci
+      - run: npx lerna bootstrap --ci --concurrency=2
       - run: npm run build
       - name: Install and Build 🔧
         run: |
