--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -20,7 +20,6 @@
     "@splitbee/web": "^0.2.4",
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3",
-    "@types/styled-components": "^5.1.9",
     "chalk": "^4.1.0",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
@@ -28,8 +27,7 @@
     "polished": "4.1.2",
     "prism-react-renderer": "^1.1.1",
     "react-player": "^2.9.0",
-    "remotion": "^2.1.5",
-    "styled-components": "^5.2.1"
+    "remotion": "^2.1.5"
   },
   "browserslist": {
     "production": [
