--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -35,7 +35,7 @@
 		"@types/styled-components": "^5.1.1",
 		"babel-loader": "^8.2.2",
 		"express": "^4.17.1",
-		"mdx-loader": "3.0.2",
+		"mdx-loader": "^1.1.1",
 		"polished": "^4.0.5",
 		"prettier": "^2.0.5",
 		"remotion": "^2.1.5",
