--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -22,11 +22,13 @@
 	"peerDependencies": {
 		"@react-three/fiber": ">=6.0.14",
 		"react": ">=17.0.1",
-		"react-dom": ">=17.0.1"
+		"react-dom": ">=17.0.1",
+		"three": "^0.129.0"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.210",
 		"@types/node": "^14.14.14",
+		"@types/three": "^0.128.0",
 		"eslint": "^7.4.0",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
