--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/babel__core": "^7.1.12",
     "@types/babel__template": "^7.4.0",
-    "typescript": "4.1.3"
+    "typescript": "^4.3.2"
   },
   "publishConfig": {
     "access": "public"
