--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,9 +35,5 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ matrix.versionffmpeg_version }}
       - run: npm i
-      - run: npx lerna bootstrap --ci --concurrency=2
-      - run: npm run build
-      # We need to call bootstrap again to link the CLI
-      # binary to allow `npx remotion`
-      - run: npx lerna bootstrap --ci --concurrency=2
+      - run: npm run build --workflows
       - run: npm test
