--- a/packages/create-video/package.json
+++ b/packages/create-video/package.json
@@ -12,11 +12,13 @@
 	],
 	"scripts": {
 		"build": "tsc -d",
-		"watch": "tsc -w"
+		"watch": "tsc -w",
+		"test": "exit 0"
 	},
 	"author": "",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"dependencies": {
+		"@types/webpack": "^5.28.0",
 		"chalk": "^4.1.0",
 		"execa": "^5.0.0",
 		"xns": "^2.0.7"
