--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,8 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "clear": "docusaurus clear"
+    "clear": "docusaurus clear",
+    "test": "exit 0"
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
