--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,6 +17,8 @@
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@remotion/player": "^2.1.6",
+    "@remotion/media-utils": "^2.1.6",
+    "@remotion/three": "^2.1.6",
     "@splitbee/web": "^0.2.4",
     "@types/color-namer": "^1.3.0",
     "clsx": "^1.1.1",
