--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/three",
-	"version": "2.1.8",
+	"version": "2.1.9",
 	"description": "Utility functions for using react-three-fiber with remotion",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -17,7 +17,7 @@
 		"url": "https://github.com/JonnyBurger/remotion"
 	},
 	"dependencies": {
-		"remotion": "^2.1.7"
+		"remotion": "2.1.9"
 	},
 	"peerDependencies": {
 		"@react-three/fiber": ">=6.0.14",
