--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/remotion-dev/remotion/issues"
   },
-  "author": "Jonny Burger <hi@jonny.io>",
+  "author": "Jonny Burger <jonny@remotion.dev>",
   "license": "ISC",
   "dependencies": {
     "@remotion/eslint-plugin": "2.1.9",
