--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -10,7 +10,7 @@
   "bugs": {
     "url": "https://github.com/remotion-dev/remotion/issues"
   },
-  "author": "Jonny Burger <hi@jonny.io>",
+  "author": "Jonny Burger <jonny@remotion.dev>",
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/experimental-utils": "^4.14.1",
