remove project - can run from example folder

--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -12,8 +12,7 @@
 		"test": "eslint src --ext ts,tsx",
 		"watch": "tsc -w",
 		"build": "tsc -d",
-		"start": "ts-node src/run.ts",
-		"test-re": "npx remotion preview remotion-project/index.ts"
+		"start": "ts-node src/run.ts"
 	},
 	"author": "",
 	"license": "MIT",
