added jsx on example folder

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -11,6 +11,7 @@
 	],
 	"scripts": {
 		"start": "remotion preview src/index.tsx",
+		"start-js":"remotion preview src/entry.jsx",
 		"test": "eslint src --ext ts,tsx,js,jsx",
 		"build": "tsc -d",
 		"render": "remotion render src/index.tsx react-svg video.mp4",
