fix bug forjs regarding remotion config
Former-commit-id: 477482d635290e9f8ca595c5936512b01a7c1885

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -15,6 +15,7 @@
 		"test": "eslint src --ext ts,tsx,js,jsx",
 		"build": "tsc -d",
 		"render": "remotion render src/index.tsx react-svg video.mp4",
+		"render-js": "remotion render src/entry.jsx framer video.mp4",
 		"render-transparent": "remotion render src/index.tsx --image-format=png --pixel-format=yuva420p --codec=vp8 react-svg video.webm"
 	},
 	"dependencies": {
