--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@remotion/bundler",
-	"version": "2.1.11",
+	"version": "2.1.9",
 	"description": "Bundler for Remotion",
 	"main": "dist/index.js",
 	"sideEffects": false,
@@ -29,10 +29,11 @@
 		"file-loader": "^6.0.0",
 		"latest-version": "^5.1.0",
 		"react-refresh": "^0.9.0-rc.2",
-		"remotion": "2.1.11",
+		"remotion": "2.1.9",
 		"semver": "7.3.4",
 		"style-loader": "^2.0.0",
 		"styled-components": "^5.2.1",
+		"url-loader": "^4.1.1",
 		"webpack": "5.37.0",
 		"webpack-hot-middleware": "^2.25.0"
 	},
