--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@tsconfig/docusaurus/tsconfig.json",
-  "include": ["src/"]
+  "include": ["src/"],
+  "compilerOptions": {
+    "types": ["node", "jest"]
+  }
 }
