--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@remotion/example",
 	"private": true,
-	"version": "2.1.11",
+	"version": "2.1.12",
 	"description": "",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"author": "Jonny Burger",
@@ -11,7 +11,7 @@
 	],
 	"scripts": {
 		"start": "remotion preview src/index.tsx",
-		"start-js":"remotion preview src/entry.jsx",
+		"start-js": "remotion preview src/entry.jsx",
 		"test": "eslint src --ext ts,tsx,js,jsx",
 		"build": "tsc -d",
 		"render": "remotion render src/index.tsx react-svg video.mp4",
@@ -23,15 +23,15 @@
 		"@babel/preset-env": "7.12.13",
 		"@babel/preset-react": "7.12.13",
 		"@react-three/drei": "^4.3.3",
-		"@remotion/babel-loader": "2.1.11",
-		"@remotion/bundler": "2.1.11",
-		"@remotion/cli": "2.1.11",
-		"@remotion/eslint-config": "2.1.10",
-		"@remotion/eslint-plugin": "2.1.10",
-		"@remotion/gif": "2.1.11",
-		"@remotion/media-utils": "2.1.11",
-		"@remotion/renderer": "2.1.11",
-		"@remotion/three": "2.1.11",
+		"@remotion/babel-loader": "^2.1.12",
+		"@remotion/bundler": "^2.1.12",
+		"@remotion/cli": "^2.1.12",
+		"@remotion/eslint-config": "^2.1.12",
+		"@remotion/eslint-plugin": "^2.1.12",
+		"@remotion/gif": "^2.1.12",
+		"@remotion/media-utils": "^2.1.12",
+		"@remotion/renderer": "^2.1.12",
+		"@remotion/three": "^2.1.12",
 		"@types/express": "^4.17.11",
 		"@types/node": "^15.0.1",
 		"@types/styled-components": "^5.1.1",
@@ -40,7 +40,7 @@
 		"mdx-loader": "3.0.2",
 		"polished": "^4.0.5",
 		"prettier": "^2.0.5",
-		"remotion": "2.1.11",
+		"remotion": "^2.1.12",
 		"styled-components": "^5.1.1",
 		"svg-path-properties": "^1.0.4",
 		"three": ">=0.128.0",
