--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "2.1.11",
+  "version": "2.1.12",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -17,9 +17,9 @@
     "@docusaurus/core": "2.0.0-beta.0",
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
-    "@remotion/media-utils": "2.1.11",
-    "@remotion/player": "2.1.11",
-    "@remotion/three": "2.1.11",
+    "@remotion/media-utils": "^2.1.12",
+    "@remotion/player": "^2.1.12",
+    "@remotion/three": "^2.1.12",
     "@splitbee/web": "^0.2.4",
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3",
@@ -32,8 +32,8 @@
     "polished": "4.1.2",
     "prism-react-renderer": "^1.2.1",
     "react-player": "^2.9.0",
-    "ts-jest": "^27.0.3",
-    "remotion": "2.1.11"
+    "remotion": "^2.1.12",
+    "ts-jest": "^27.0.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
