feat(docs): add twoslash
Former-commit-id: c20cef25c67782d8691ce58839e6e1d7a5576537

--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "include": ["src/"],
   "compilerOptions": {
-    "types": ["node", "jest"]
+    "types": ["node", "jest", "@docusaurus/module-type-aliases"]
   }
 }
