--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -27,6 +27,7 @@
     "chalk": "^4.1.0",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
+    "docusaurus-preset-shiki-twoslash": "^1.1.3",
     "hls.js": "^0.14.17",
     "jest": "^27.0.4",
     "polished": "4.1.2",
