--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,17 +13,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@docusaurus/core": "2.0.0-beta.0",
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
+    "@remotion/babel-loader": "^2.1.12",
     "@remotion/media-utils": "^2.1.12",
     "@remotion/player": "^2.1.12",
+    "@remotion/renderer": "^2.1.12",
     "@remotion/three": "^2.1.12",
     "@splitbee/web": "^0.2.4",
-    "@types/color-namer": "^1.3.0",
-    "@types/hls.js": "^0.13.3",
-    "@types/jest": "^26.0.23",
     "chalk": "^4.1.0",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
@@ -37,8 +35,11 @@
     "ts-jest": "^27.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
-    "@tsconfig/docusaurus": "^1.0.2"
+    "@tsconfig/docusaurus": "^1.0.2",
+    "@types/color-namer": "^1.3.0",
+    "@types/hls.js": "^0.13.3"
   },
   "browserslist": {
     "production": [
