--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,6 +17,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@remotion/babel-loader": "^2.1.12",
+    "@remotion/gif": "^2.1.12",
     "@remotion/media-utils": "^2.1.12",
     "@remotion/player": "^2.1.12",
     "@remotion/renderer": "^2.1.12",
