--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,14 +17,15 @@
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@remotion/babel-loader": "^2.1.12",
+    "@remotion/bundler": "^2.1.12",
     "@remotion/gif": "^2.1.12",
     "@remotion/media-utils": "^2.1.12",
-    "@remotion/bundler": "^2.1.12",
     "@remotion/player": "^2.1.12",
     "@remotion/renderer": "^2.1.12",
     "@remotion/three": "^2.1.12",
     "@splitbee/web": "^0.2.4",
     "chalk": "^4.1.0",
+    "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
     "docusaurus-preset-shiki-twoslash": "^1.1.3",
