--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,6 +28,7 @@
     "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
+    "cross-env": "^7.0.3",
     "docusaurus-preset-shiki-twoslash": "^1.1.3",
     "hls.js": "^0.14.17",
     "jest": "^27.0.4",
