--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -29,12 +29,11 @@
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
     "cross-env": "^7.0.3",
-    "docusaurus-preset-shiki-twoslash": "^1.1.3",
     "hls.js": "^0.14.17",
     "jest": "^27.0.4",
     "polished": "4.1.2",
-    "prism-react-renderer": "^1.2.1",
     "react-player": "^2.9.0",
+    "remark-shiki-twoslash": "^1.4.8",
     "remotion": "^2.1.12",
     "ts-jest": "^27.0.3"
   },
