feat: upgrade to docusaurus-twoslash plugin v1.1.5
Former-commit-id: 6ffc08e156c19329f92b369aa1c13712425a99f2

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -28,12 +28,11 @@
     "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
-    "cross-env": "^7.0.3",
+    "docusaurus-preset-shiki-twoslash": "^1.1.5",
     "hls.js": "^0.14.17",
     "jest": "^27.0.4",
     "polished": "4.1.2",
     "react-player": "^2.9.0",
-    "remark-shiki-twoslash": "^1.5.0",
     "remotion": "^2.1.12",
     "ts-jest": "^27.0.3"
   },
