--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -35,6 +35,7 @@
 		"lambdafs": "^2.0.3",
 		"minimist": "^1.2.5",
 		"p-limit": "^3.1.0",
+		"p-retry": "^4.6.0",
 		"prompt": "^1.1.0",
 		"@types/prompt": "^1.1.0",
 		"remotion": "^2.1.4",
