--- a/packages/create-video/package.json
+++ b/packages/create-video/package.json
@@ -21,8 +21,7 @@
 		"execa": "^5.0.0",
 		"fs-extra": "^9.1.0",
 		"npm-package-arg": "^8.1.2",
-		"prompts": "^2.4.1",
-		"xns": "^2.0.7"
+		"prompts": "^2.4.1"
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.233",
