chore: setup example with multiple audio sources
Former-commit-id: 8dc2f98d43a0d8122890ef4550f0e01b6c994530

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -10,11 +10,12 @@
 		"dist"
 	],
 	"scripts": {
+		"serve": "npx http-server src/AudioTesting",
 		"start": "remotion preview src/index.tsx",
 		"start-js": "remotion preview src/entry.jsx",
 		"test": "eslint src --ext ts,tsx,js,jsx && jest",
 		"build": "tsc -d",
-		"render": "remotion render src/index.tsx react-svg out/video.mp4",
+		"render": "remotion render src/index.tsx audio-testing video.mp4",
 		"render-js": "remotion render src/entry.jsx framer out/video.mp4",
 		"render-transparent": "remotion render src/index.tsx --image-format=png --pixel-format=yuva420p --codec=vp8 react-svg out/video.webm"
 	},
