--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,8 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.4",
-    "@docusaurus/preset-classic": "^2.0.0-beta.4",
+    "@docusaurus/core": "2.0.0-beta.0",
+    "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@remotion/babel-loader": "^2.2.4",
     "@remotion/bundler": "^2.2.4",
@@ -37,7 +37,8 @@
     "ts-jest": "^27.0.3"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
     "@tsconfig/docusaurus": "^1.0.2",
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3"
