--- a/packages/create-video/package.json
+++ b/packages/create-video/package.json
@@ -18,6 +18,7 @@
 	"license": "SEE LICENSE IN LICENSE.md",
 	"dependencies": {
 		"chalk": "^4.1.0",
+		"degit": "^2.8.4",
 		"execa": "^5.0.0",
 		"fs-extra": "^9.1.0",
 		"prompts": "^2.4.1",
@@ -25,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@jonny/eslint-config": "^2.1.233",
+		"@types/degit": "^2.8.3",
 		"@types/fs-extra": "^9.0.11",
 		"@types/node": "^15.0.1",
 		"@types/prompts": "^2.0.12",
