--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -15,6 +15,8 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
+		"@ffmpeg/core": "^0.10.0",
+		"@ffmpeg/ffmpeg": "^0.10.1",
 		"@remotion/bundler": "^2.2.4",
 		"execa": "^4.0.2",
 		"got": "11.8.2",
