--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@remotion/example",
 	"private": true,
-	"version": "2.2.4",
+	"version": "2.3.0",
 	"description": "",
 	"license": "SEE LICENSE IN LICENSE.md",
 	"author": "Jonny Burger",
@@ -23,15 +23,15 @@
 		"@babel/preset-env": "7.12.13",
 		"@babel/preset-react": "7.12.13",
 		"@react-three/drei": "^4.3.3",
-		"@remotion/babel-loader": "^2.2.4",
-		"@remotion/bundler": "^2.2.4",
-		"@remotion/cli": "^2.2.4",
+		"@remotion/babel-loader": "^2.3.0",
+		"@remotion/bundler": "^2.3.0",
+		"@remotion/cli": "^2.3.0",
 		"@remotion/eslint-config": "^2.2.4",
 		"@remotion/eslint-plugin": "^2.2.4",
-		"@remotion/gif": "^2.2.4",
-		"@remotion/media-utils": "^2.2.4",
-		"@remotion/renderer": "^2.2.4",
-		"@remotion/three": "^2.2.4",
+		"@remotion/gif": "^2.3.0",
+		"@remotion/media-utils": "^2.3.0",
+		"@remotion/renderer": "^2.3.0",
+		"@remotion/three": "^2.3.0",
 		"@types/express": "^4.17.11",
 		"@types/node": "^15.0.1",
 		"@types/styled-components": "^5.1.1",
@@ -40,7 +40,7 @@
 		"mdx-loader": "3.0.2",
 		"polished": "^4.0.5",
 		"prettier": "^2.0.5",
-		"remotion": "^2.2.4",
+		"remotion": "^2.3.0",
 		"styled-components": "^5.1.1",
 		"svg-path-properties": "^1.0.4",
 		"three": ">=0.128.0",
@@ -53,9 +53,9 @@
 		"@types/babel__core": "^7.1.12",
 		"@types/babel__template": "^7.4.0",
 		"eslint": "^7.25.0",
+		"jest": "^27.0.6",
 		"prettier-plugin-organize-imports": "^1.1.1",
-		"ts-jest": "^27.0.4",
-		"jest": "^27.0.6"
+		"ts-jest": "^27.0.4"
 	},
 	"publishConfig": {
 		"access": "public"
