--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,11 +10,12 @@
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
+    "postinstall": "patch-package",
     "test": "jest"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.0",
-    "@docusaurus/preset-classic": "2.0.0-beta.0",
+    "@docusaurus/core": "2.0.0-beta.5",
+    "@docusaurus/preset-classic": "2.0.0-beta.5",
     "@mdx-js/react": "^1.6.21",
     "@remotion/babel-loader": "^2.3.0",
     "@remotion/bundler": "^2.3.0",
@@ -28,9 +29,10 @@
     "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
-    "docusaurus-preset-shiki-twoslash": "^1.1.16",
+    "docusaurus-preset-shiki-twoslash": "1.1.16",
     "hls.js": "^0.14.17",
     "jest": "^27.0.4",
+    "patch-package": "^6.4.7",
     "polished": "4.1.2",
     "react-player": "^2.9.0",
     "remotion": "^2.3.0",
