--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -22,6 +22,7 @@
     "@remotion/gif": "^2.3.3",
     "@remotion/media-utils": "^2.3.3",
     "@remotion/player": "^2.3.3",
+    "@remotion/lambda": "^2.3.3",
     "@remotion/renderer": "^2.3.3",
     "@remotion/three": "^2.3.3",
     "@splitbee/web": "^0.2.4",
