--- a/packages/player-example/package.json
+++ b/packages/player-example/package.json
@@ -25,7 +25,7 @@
 	},
 	"scripts": {
 		"start": "craco start",
-		"build": "craco build"
+		"build": "exit 0"
 	},
 	"eslintConfig": {
 		"extends": [
