--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
   "lerna": "2.11.0",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "2.3.3"
+  "packages": ["packages/*"],
+  "version": "2.3.4"
 }
