--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -29,6 +29,7 @@
 		"@remotion/eslint-config": "^2.3.4",
 		"@remotion/eslint-plugin": "^2.3.4",
 		"@remotion/gif": "^2.3.4",
+		"@remotion/lambda": "^2.3.4",
 		"@remotion/media-utils": "^2.3.4",
 		"@remotion/renderer": "^2.3.4",
 		"@remotion/three": "^2.3.4",
