--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
   "lerna": "2.11.0",
-  "packages": ["packages/*"],
-  "version": "2.3.4"
+  "packages": [
+    "packages/*"
+  ],
+  "version": "2.4.0"
 }
