--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^10.0.0",
 		"esbuild": "^0.11.12",
 		"minimist": "^1.2.5",
+		"lambdafs": "^2.0.3",
 		"p-limit": "^3.1.0",
 		"p-retry": "^4.6.0",
 		"prompt": "^1.1.0",
