chore: Lerna 4 upgrade

--- a/packages/tsconfig.settings.json
+++ b/packages/tsconfig.settings.json
@@ -8,6 +8,7 @@
     "lib": ["es2019", "dom"],
     "jsx": "react-jsx",
     "noEmit": false,
+    "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
