--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -29,6 +29,7 @@
 		"@jonny/eslint-config": "^2.1.210",
 		"@types/node": "^14.14.14",
 		"@types/three": "^0.128.0",
+		"three": "^0.133.0",
 		"eslint": "^7.4.0",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
