--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,10 +35,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: ${{ matrix.versionffmpeg_version }}
-      - run: npm i
-      - run: npx lerna bootstrap --ci --concurrency=2
-      - run: npm run build
-      # We need to call bootstrap again to link the CLI
-      # binary to allow `npx remotion`
-      - run: npx lerna bootstrap --ci --concurrency=2
-      - run: npm test
+      - run: |
+          npm i
+          npm run build
+          npm test
