chore: updated some deps and locks

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,8 +12,9 @@ jobs:
         with:
           persist-credentials: false
 
-      - run: npm i
-      - run: npm run build
+      - run: |
+          npm i
+          npm run build
       - name: Install and Build 🔧
         run: |
           cd packages/docs && npm run build-docs
