--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
-    "test": "lerna run test && npx jest --runInBand",
+    "postinstall": "patch-package",
+    "bootstrap": "lerna bootstrap --hoist",
+    "test": "lerna run test && jest --runInBand",
     "build": "lerna run build",
     "watch": "lerna run watch --stream --parallel"
   },
@@ -18,8 +20,10 @@
     "eslint": "^7.25.0",
     "execa": "^5.0.0",
     "jest": "^27.2.4",
+    "jest-environment-jsdom": "^27.2.4",
     "lerna": "^4.0.0",
     "prettier": "^2.2.1",
+    "patch-package": "^6.4.7",
     "prettier-plugin-organize-imports": "^1.1.1",
     "sharp": "^0.29.0",
     "ts-jest": "^27.0.5",
@@ -30,8 +34,5 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "three": "^0.128.0"
-  },
-  "workspaces": [
-    "packages/**"
-  ]
+  }
 }
