--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,6 +14,7 @@ jobs:
 
       - run: |
           npm i
+          npm run bootstrap -- --ci --concurrency=2
           npm run build
       - name: Install and Build 🔧
         run: |
