prebuild lambda function

--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -12,6 +12,7 @@
 		"test": "eslint src --ext ts,tsx && tsc && jest",
 		"watch": "tsc -w",
 		"build": "tsc -d",
+		"buildlambda": "ts-node src/admin/bundle-lambda.ts",
 		"start": "ts-node src/run.ts"
 	},
 	"author": "",
@@ -29,14 +30,10 @@
 		"@remotion/renderer": "^2.1.4",
 		"aws-policies": "^1.0.1",
 		"dotenv": "^10.0.0",
-		"esbuild": "^0.11.12",
 		"minimist": "^1.2.5",
 		"p-limit": "^3.1.0",
-		"p-retry": "^4.6.0",
 		"prompt": "^1.1.0",
-		"remotion": "^2.1.4",
-		"ts-node": "^9.1.1",
-		"zip-lib": "^0.7.2"
+		"remotion": "^2.1.4"
 	},
 	"peerDependencies": {
 		"react": "^17.0.1",
@@ -47,11 +44,14 @@
 		"@types/node": "^14.14.14",
 		"@types/prompt": "^1.1.0",
 		"@types/jest": "^26.0.23",
+		"esbuild": "^0.11.12",
+		"zip-lib": "^0.7.2",
 		"eslint": "^7.4.0",
 		"jest": "^26.6.3",
 		"prettier": "^2.0.5",
 		"prettier-plugin-organize-imports": "^1.1.1",
 		"ts-jest": "^26.5.6",
+		"ts-node": "^9.1.1",
 		"typescript": "^4.1.2"
 	},
 	"publishConfig": {
