--- a/packages/lambda/.eslintrc
+++ b/packages/lambda/.eslintrc
@@ -2,7 +2,8 @@
 	"extends": "@jonny",
 	"rules": {
 		"no-console": "off",
-		"ts-exports/unused-exports": "off"
+		"ts-exports/unused-exports": "off",
+		"arrow-body-style": "off"
 	},
 	"overrides": [
 		{
