--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -1,6 +1,8 @@
 {
 	"extends": "@jonny",
 	"rules": {
+		"arrow-body-style": "off",
+		"no-bitwise": "off",
 		"ts-exports/unused-exports": "off"
 	}
 }
