--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,12 +11,11 @@
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
-    "postinstall": "patch-package",
     "test": "eslint src && jest"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.5",
-    "@docusaurus/preset-classic": "2.0.0-beta.5",
+    "@docusaurus/core": "2.0.0-beta.6",
+    "@docusaurus/preset-classic": "2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
     "@remotion/babel-loader": "^2.4.1",
     "@remotion/bundler": "^2.4.1",
@@ -30,7 +29,7 @@
     "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "color-namer": "1.4.0",
-    "docusaurus-preset-shiki-twoslash": "1.1.16",
+    "docusaurus-preset-shiki-twoslash": "1.1.32",
     "hls.js": "^0.14.17",
     "jest": "^27.2.4",
     "polished": "4.1.2",
@@ -39,9 +38,9 @@
     "ts-jest": "^27.0.5"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
-    "@tsconfig/docusaurus": "^1.0.2",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.6",
+    "@tsconfig/docusaurus": "^1.0.4",
+    "@types/jest": "^27.0.2",
     "@types/color-namer": "^1.3.0",
     "@types/hls.js": "^0.13.3"
   },
