--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -9,7 +9,7 @@
 	},
 	"module": "true",
 	"scripts": {
-		"test": "eslint src --ext ts,tsx && tsc && jest",
+		"test": "CI=true eslint src --ext ts,tsx && tsc -d && CI=true jest",
 		"watch": "tsc -w",
 		"build": "tsc -d",
 		"buildlambda": "ts-node src/admin/bundle-lambda.ts",
