add lerna back again
Former-commit-id: 2ef22c74d78214618bdf1f7ac782887b8ae8e882

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "@react-three/fiber": "^6.1.2",
+    "lerna": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "three": "^0.128.0"
-  }
+  },
+  "name": "remotion"
 }
