--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
     "sharp": "^0.29.0",
+    "remotion": "^2.4.3",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
