move pnpm into the right package
Former-commit-id: 5a2f946eab8e920efc651818df6974dca844227f

--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -16,6 +16,7 @@
 		"url": "https://github.com/remotion-dev/remotion"
 	},
 	"dependencies": {
+		"@testing-library/dom": "^8.7.2",
 		"@remotion/bundler": "^2.4.3",
 		"execa": "^4.0.2",
 		"got": "11.8.2",
