--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
     "sharp": "^0.29.0",
+    "@remotion/three": "^2.4.3",
+    "@remotion/player": "^2.4.3",
+    "@remotion/gif": "^2.4.3",
+    "@remotion/cli": "^2.4.3",
+    "@remotion/media-utils": "^2.4.3",
+    "@remotion/renderer": "^2.4.3",
+    "@remotion/bundler": "^2.4.3",
     "remotion": "^2.4.3",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
